fix:footer removed align center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -895,16 +895,11 @@ footer .logo a {  color: #fff;}
   footer .logo {  padding: 0 0 20px 0;}
 
   footer .wrapper-large {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    padding: 20px 5%;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
 
   .copyright {  position: static;}
